--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,9 +1,6 @@
 .landing-page {
 	opacity: 0;
 	&__content {
-		padding-top: 60px;
-		padding-bottom: 60px;
-		// min-height: 100vh;
 		min-height: 91.35vh;
 		line-height: 1.38;
 		color: $color-black-light;
